# MLOps_Group_50

./: 404.html  README.md  exam_template.md  index.html  objects.inv  pyproject.toml
.github/workflows/: cml_data.yaml  deploy_docs.yaml  docker-builder.yml  linting.yaml  pre-commit-update.yaml  stage_model.yaml  tests.yaml
MLOps_project/: .gitignore  LICENSE  README.md  data.dvc  dummy.txt.dvc  pyproject.toml  requirements.txt  sweep.yaml  tasks.py
MLOps_project/.devcontainer/: devcontainer.json
MLOps_project/.dvc/: config
MLOps_project/.github/workflows/: docker-builder.yml  tests.yaml
MLOps_project/.uv/: config.toml
MLOps_project/api/: data_drift.py  main.py  report.html
MLOps_project/config/experiments/: ex2_conf.yaml  ex3_conf.yaml  training_conf.yaml
MLOps_project/config/testings/: train_test2_conf.yaml
MLOps_project/config/tests/: train_test1_conf.yaml
MLOps_project/dockerfiles/: api.dockerfile  train.dockerfile
MLOps_project/docs/: mkdocs.yaml
MLOps_project/docs/source/: index.md  my_api.md
MLOps_project/models/: emotion_model.pth  emotion_test.pth
MLOps_project/reports/: README.md  report.html
MLOps_project/src/group50/: api.py  data.py  evaluate.py  model.py  train.py  train_hydra_ver.py
MLOps_project/src/group50/config/: training_conf.yaml
MLOps_project/src/group50/config/experiments/: ex1_conf.yaml  ex2_conf.yaml  training_conf.yaml
MLOps_project/tests/: test_data.py  test_model.py  test_training.py
MLOps_project/tests/integrationtests/: test_apis.py
MLOps_project/tests/performancetests/: locustfile.py
MLOps_project/wandb/: latest-run
MLOps_project/wandb/run-20260115_154247-nnkdptcp/: run-nnkdptcp.wandb
MLOps_project/wandb/run-20260115_154247-nnkdptcp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
my_api/: index.html
search/: search_index.json
