[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "group50"
version = "0.0.1"
description = "This is a project made by five students from DTU through the Machine Learning Operation course 6."
authors = [
  { name = "group50", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.9",
    "datetime>=6.0",
    "dvc[gs]>=3.66.1",
    "evidently>=0.7.20",
    "hydra-core>=1.3",
    "logging>=0.4.9.6",
    "mkdocs-material>=4.8.0",
    "mkdocstrings[python]>=0.28.2",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pytest>=8.3.4",
    "python-multipart>=0.0.21",
    "timm>=1.0.24",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.1",
    "wandb>=0.24.0",
    "uvicorn[standard]",
    "fastapi==0.115.6",
    "httpx>=0.28.1",
    "locust>=2.43.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.coverage.run]
source = ["group50"]
omit = ["tests/*", "**/_remote_module_non_scriptable.py",]

[tool.coverage.report]
show_missing = true
skip_empty = true

[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
cuda = ["torch>=2.6.0"]
mps = ["torch>=2.6.0"]

[project.scripts]
train_sweep = "group50.train:train"
train_hydra = "group50.train_hydra_ver:train"
eval = "group50.evaluate:evaluate_model"
